[package]
name = "comui"
version = "0.1.0"
edition = "2024"

[features]
default = []
layout-debug = []

[dependencies]
anyhow = "1.0.98"
cosmic-text = "0.14.2"
lyon = "1.0.1"
macroquad = "0.4.14"
nalgebra = "0.33.2"
tracing = "0.1"

[dev-dependencies]
tracing-tracy = "0.11"
tracing-subscriber = "*"

[profile.release]
debug = true
